--- a/404.html
+++ b/404.html
@@ -2,4 +2,7 @@
 layout: index
 ---
 
-Page Not Found.
+<div style="text-align: center">
+  <p><strong>Page Not Found.</strong></p>
+  <p><a href="/">Home</p>
+</div>
