--- a/404.html
+++ b/404.html
@@ -3,6 +3,6 @@ layout: index
 ---
 
 <div style="text-align: center">
-  <p><strong>Page Not Found.</strong></p>
-  <p><a href="/">Home</p>
+  <div><strong>Page Not Found.</strong></div>
+  <div><a href="/">Home</div>
 </div>
